# zstd-prebuilt

./: .bazelrc  BUILD.bazel  MODULE.bazel  README.md  external  test.sh
.github/workflows/: build.yaml  release.yml
patches/: add_build_file.patch  module_dot_bazel.patch
testdata/: test.txt.lz4  test.txt.lzma  test.txt.xz  test.txt.zst
